aws-eks/cluster/sg_lb.tf
resource "aws_security_group" "kubernetes_lb" {
  name        = "${var.cluster_name}-sg-lb"
  description = "Cluster communication with worker nodes"
  vpc_id      = "${aws_vpc.demo.id}"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "${var.cluster_name}"
  }
}
